--- a/tarea_3_marcadoresx2/tarea3.html
+++ b/tarea_3_marcadoresx2/tarea3.html
@@ -11,8 +11,9 @@
     <!-- script de AR.JS con soporte de marker + location -->
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
+    <script src="componentes/randomMove.js" ></script>
+    <script src="componentes/balonMove.js" ></script>
     <script src="tarea3.js"></script>
-    <script src="componentes/randomMove.js"></script>
     <link rel="stylesheet" type="text/css" href="tarea3.css"/>
 </head>
 
@@ -20,6 +21,7 @@
   <div class="buttons">
     <button id="a" class="button">Play</button>
     <button id="b" class="button">Pause</button>
+    <button id="c" class="button">Pass</button>
   </div>
   <div class="coords">
     <label class="marker">HIRO:<input id="hiroLabel" type="text" readonly value="x: 0, y: 0, z: 0"></label>
@@ -27,18 +29,22 @@
     <label class="marker">PLANE:<input id="planeLabel" type="text" readonly value="x: 0, y: 0, z: 0, width: 0, height: 0"></label>
   </div>
 
-  <a-scene embedded arjs>
-    <!-- vr-mode-ui="enabled: false;"
+  <a-scene 
+    vr-mode-ui="enabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     embedded
-    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"> -->
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
-    <a-box id="plane" rotation="0 0 0" position="0 0 0" depth="0.5" color="#4CC3D9"></a-box>
+    <a-box id="plane" depth="0.1" color="#4CC3D9"></a-box>
+    <a-box id="boxToMove" random_move width="0.25" height="0.25" depth="0.25"></a-box>
+    <a-sphere id="balon" balon_move radius="0.25" color="blue"></a-sphere>
+
     <a-marker preset='hiro' id="hiro">
         <a-sphere radius="0.15" color="yellow"></a-sphere>
         <a-entity id="lineX"></a-entity>
         <a-entity id="lineY"></a-entity>
     </a-marker>
+
     <a-marker preset='kanji' id="kanji">
         <a-sphere radius="0.15" color="red"></a-sphere>
     </a-marker>
